overflow for responsiveness fixed

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -12,10 +12,7 @@
 }
 
 .product-box-info {
-	float: left;
-	margin: 8px 0px 0px 8px;
 	white-space: nowrap; 	
 	overflow: hidden;	
 	text-overflow: ellipsis; 
-	width: 170px;
 }
